@@ -1,3 +1,4 @@
+0.19.2-0 @10/19/2004 01:45:00 UTC@
 0.19.1-0 @10/11/2004 15:05:00 UTC@
 0.19.0-0 @10/07/2004 20:50:00 UTC@
 0.18.0-0 @09/17/2004 22:50:00 UTC@
